--- a/src/main/resources/templates/member/signup.html
+++ b/src/main/resources/templates/member/signup.html
@@ -7,6 +7,8 @@
     <title>회원가입</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+
     <style>
         /* 회원가입 폼 스타일 */
         .signup-container {
@@ -83,6 +85,12 @@
                 <input type="text" class="form-control" id="name" name="name" placeholder="이름 입력" required>
             </div>
 
+            <!-- 이름 입력 -->
+            <div class="mb-3">
+                <label for="nickName">닉네임 *</label>
+                <input type="text" class="form-control" id="nickName" name="nickName" placeholder="닉네임 입력" required>
+            </div>
+
             <!-- 핸드폰 번호 -->
             <div class="mb-3">
                 <label for="phone">핸드폰 번호 *</label>
@@ -111,7 +119,7 @@
                 <label for="sample6_address">주소 *</label>
                 <div class="input-group mb-2">
                     <input type="text" class="form-control" id="sample6_postcode" name="postCode" placeholder="우편번호">
-                    <button type="button" class="btn btn-secondary" onclick="sample6_execDaumPostcode()">우편번호 찾기</button>
+                    <button type="button" class="btn btn-secondary" id="postcodeBtn">우편번호 찾기</button>
                 </div>
                 <input type="text" class="form-control mb-2" name="address" id="sample6_address" placeholder="주소">
                 <div class="row">
@@ -135,8 +143,6 @@
         </div>
     </div>
 </main>
-
-<script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 <script layout:fragment="js" th:src="@{/js/member/signup.js}"></script>
 </body>
 </html>
