--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title layout:title-pattern="$LAYOUT_TITLE | $CONTENT_TITLE">eBookLand</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/css/chat/chat.css}">
 
 </head>
 
@@ -19,6 +20,28 @@
 <footer th:replace="~{fragments/footer::footerFragment}"></footer>
 
 <script layout:fragment="js"></script>
+
+<div class="chat-icon" onclick="toggleChat()">
+    💬
+</div>
+
+<div class="chat-window" id="chatWindow">
+    <div class="chat-header" onclick="toggleChat()">1:1 채팅</div>
+    <div class="chat-body" id="chatBody">
+        <h3>여기에 메세지가 들어간다.</h3>
+    </div>
+    <div class="chat-input">
+        <input type="text" id="chatMessage" placeholder="메시지를 입력하세요...">
+        <button onclick="sendMessage()">전송</button>
+    </div>
+</div>
+
+<script>
+    function toggleChat() {
+        var chatWindow = document.getElementById("chatWindow");
+        chatWindow.style.display = (chatWindow.style.display === "flex" ? "none" : "flex");
+    }
+</script>
 
 
 <!-- 스크립트 부분 -->
