--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -49,7 +49,9 @@
                     <li class="nav-item"><a th:href="@{/freeboard/list}" class="nav-link">자유게시판</a></li>
                     <li class="nav-item"><a th:href="@{/noticeboard/list}" class="nav-link">공지사항</a></li>
                     <li class="nav-item"><a sec:authorize="hasRole('MEMBER')" th:href="@{/member/mybook}" class="nav-link">책 읽기</a></li>
-                    <li class="nav-item"><a sec:authorize="hasRole('ADMIN')" th:href="@{/admin/adminboard}" class="nav-link">관리자 게시판</a></li>
+                    <li class="nav-item"><a sec:authorize="hasRole('ADMIN')" th:href="@{/bookboard/registbook}" class="nav-link">도서 등록</a></li>
+                    <li class="nav-item"><a sec:authorize="hasRole('ADMIN')" th:href="@{/bookboard/list}" class="nav-link">도서 수정</a></li>
+                    <li class="nav-item"><a sec:authorize="hasRole('ADMIN')" th:href="@{/admin/chatmanagement}" class="nav-link">채팅 관리</a></li>
                 </ul>
             </div>
         </div>
